--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,13 +1,12 @@
 [bumpversion]
-current_version = 1.0.0
-commit = False
-tag = False
+current_version = 1.0.0-beta.0
+commit = True
+tag = True
 parse = 
 	# (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\-(?P<release>[a-z]+)\.(?P<prenum>\d+)
 	(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)              # major, minor and patch
 	(?:\-(?P<pre>(?:dev|alpha|beta|rc))\.(?P<prenum>\d+))?      # pre-release
 	(?:\+(?P<build>\d+))?                                       # build metadata
-
 serialize = 
 	{major}.{minor}.{patch}-{pre}.{prenum}+{build}
 	{major}.{minor}.{patch}-{pre}.{prenum}
@@ -15,16 +14,12 @@ serialize =
 	{major}.{minor}.{patch}
 
 [bumpversion:part:pre]
-optional_value = stable
 values = 
-	dev
-	alpha
+	# alpha
 	beta
-	rc
-	stable
 
 [bumpversion:part:prenum]
-first_value = 1
+first_value = 0
 
 [bumpversion:file:composer.json]
 search = version\": \"{current_version},
