--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "kevinrob/guzzle-cache-middleware": "^3.3",
+        "doctrine/cache": "^1.10"
     }
 }
